1-webfund/css/portfolio/style.css
/* * {
    outline: red dotted;
} */

body {
    background: rgb(63,94,251);
    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
    margin: 0;
}

#nav {
    width: 100%;
    display: flex;
    padding: 0%;
    background-color: rgb(255 255 255 / 67%);
    margin: 0% 0% 0% 0%;
}

#nav-name {
    flex: 2;
    margin-left: 1%;
}

#nav-desc {
    flex: 1;
    white-space: nowrap;
}

#content {
    max-width: 80%;
    margin: 0 auto;
}

#container {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
}

#headshot {
    background-color: #bbbbbbd9;
    padding: 5px;
    flex-direction: column;
    margin: 1% 0% 1% 0%;
    flex: 1;
}

#headshot img {
    object-fit: fill;
    width: 100%;
    height: 100%;
    vertical-align: top;
}

#about {
    background-color: rgb(191 190 185 / 66%);
    border: 1px;
    margin: 1% 0% 1% 1%;
    flex: 1;
    border-radius: 10px;
}

#about p {
    padding: 2%;
}

#about a {
    color: black
}

#cards {
    display: flex;
    justify-content: space-between;
    align-items: stretch;
}

.card {
    background-color: rgb(191 190 185 / 66%);
    min-height: 10%;
    max-width: 30%;
    min-width: 20%;
    display: flex;
    flex-direction: column;
    margin: 1% 0% 2% 0%;
    border-radius: 10px;
}

.card p {
    padding: 1%;
    margin: 1% 1% 1% 1%;
}

.articlehead {
    background-color: rgba(255, 255, 255, 0.638);
    border-radius: 15px;
    margin-bottom: 10px;
}

.card h2, h3 {
    padding: 5px;
    text-align: center;
}

.card .table {
	display: table;
    text-align: left;
	margin: 0 auto;
}

.card .table ul {
	list-style: none;
	padding-top: 20px;
}

.card .table ul li {
	display: inline;
    margin: 2% 5% 5% 2%;
}

.card .table img {
    margin: 0% -1% 3% 0%;
    width: 45px;
}

.card .buttoncontainer {
    display: table;
    margin-bottom: 20px;
}

.card .button {
    display: table-cell;
    text-align: center;
    vertical-align: bottom;
}

.card .button a {
    background-color: rgb(115 115 115 / 82%);
    color: rgb(255, 255, 255);
    border-radius: 5px;
    text-decoration: none;
    padding: 1%;
    font-weight: bold;
}

#la-mode {
    flex: 1
}

#family-contacts {
    flex: 1
}

#fiveeleven {
    flex: 1
}

#footer {
    width: 100%;
    display: flex;
    vertical-align: top;
    padding: 0%;
    background-color: rgb(255 255 255 / 67%);
    margin: 0% 0% 0% 0%;
}

#footer .table {
	display: table;
    text-align: center;
	margin: 0 auto;
}

#footer .table ul {
	min-width: 696px;
	list-style: none;
	padding-top: 20px;
}

#footer .table ul li {
	display: inline;
}

#footer .table img {
    margin-right: 0.5%;
    margin-top: -3%;
    width: 2%;
    height: auto;
}
#footer .table a {
    margin-right: 0.5%;
}

#footer .table .round-icon {
    border-radius: 100%;
}

#footer .table .square-icon {
    border-radius: 15%;
}

